source/themes/custom/gearwrench/styles/libraries/region/header.scss
/* ... */
.user-logged-in .region-header .block--header-search .block__content {
  right: -6.3rem;
}


/**
 * Offset page since header is fixed.
 */
.page {
  padding-top: $header-height-large;

  @include media('<=lg-plus') {
    padding-top: $header-height;
  }
  @include media('<lg') {
    padding-top: $header-height-mobile;
  }

  body.page-node-type-landing-page & {
    padding-top: $header-height;
  }
}

/**
 * Region styles to hide non-header content with menu open.
 * Needed for accessibility.
 * Disables tabbing to page content.
 * @todo this needs to be switched to only when on mobile
 */
.region:not(.region-header) {
  transition: visibility 0ms linear;
}

body {
  &::after {
    background: $black;
    bottom: 0;
    content: '';
    left: 0;
    position: fixed;
    opacity: 0;
    right: 0;
    transition: z-index 0ms linear 300ms, opacity 300ms linear;
    top: 0;
    z-index: -1;
  }

  @include media($header-bp-mobile) {
    &[data-panel-open='block-header-menu-main--menu'],
    &[data-panel-open='block-header-search--content'] {
      .region:not(.region-header) {
        transition: visibility 0ms linear 300ms;
        visibility: hidden;
      }

      .region-header__inner {
        max-height: 100vh; // Fallback for if var() isn't supported.
        max-height: calc(100vh - var(--admin-toolbar-height));
      }
    }

  }
}

/**
 * Admin-related overrides to move fixed header down on page if admin-toolbar is present.
 * Note: some browsers dont support css variables, but used here since this is only an offset for admin use.
 */
body.toolbar-fixed {
  --admin-toolbar-height: #{$admin-toolbar};

  &.toolbar-horizontal.toolbar-tray-open {
    --admin-toolbar-height: #{$admin-toolbar-and-tray-horizontal};
  }
}

@keyframes headerPanelFade {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes searchPanelSlide {
  0% {
    right: -25rem;
  }

  100% {
    right: 0;
  }
}

